--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta property="og:title" content="🌮 Cuenta Compartida - Foodie Party">
-    <meta property="og:description" content="Detalle final de la cuenta: 9 personas. ¡Toca tu nombre para ver el desglose!">
+    <meta property="og:title" content="🌮 Cuenta Los Sanchez">
+    <meta property="og:description" content="Cuenta Cumpleañera 30ñera Sra. Valeria">
     <meta property="og:type" content="website">
 
     <title>Cuenta Compartida Interactiva</title>
