--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Cuenta Cumpleañera 30ñera Sra. Valeria">
     <meta property="og:type" content="website">
 
-    <title>Cuenta Compartida Interactiva</title>
+    <title>Cuenta los sanchez</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
