--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta property="og:title" content="🌮 Cuenta Los Sanchez">
     <meta property="og:description" content="Cuenta Cumpleañera 30ñera Sra. Valeria">
     <meta property="og:type" content="website">
-
+    <link rel="icon" href="icon.jpeg">
+    <meta property="og:image" content="https://lmozz.github.io/los-sanchez/icon.jpeg">
     <title>Cuenta los sanchez</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
