--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta property="og:title" content="🌮 Cuenta Los Sanchez">
-    <meta property="og:description" content="Cuenta Cumpleañera 30ñera Sra. Valeria">
+    <meta property="og:title" content="🌮 Cheles paguenme">
+    <meta property="og:description" content="Pago cheles para 30ñera Sra. Valeria">
     <meta property="og:type" content="website">
     <link rel="icon" href="icon.jpeg">
     <meta property="og:image" content="https://lmozz.github.io/los-sanchez/icon.jpeg">
-    <title>Cuenta los sanchez</title>
+    <title>Cuenta los sanchez con los cheles</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
