--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <div class="container">
     <h2>🍽️ Cuenta Compartida</h2>
-    <p class="subtitle">(En móvil, toca un nombre para ver el detalle)</p>
+    <p class="subtitle">#Cuenta: 77194231 Banco Agricola</p>
 
     <div id="list">
         <div class="row" onclick="toggleRow(this)">
